# autotuner-rl

./: .editorconfig  .env.example  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: FindOpenCL.cmake
dashboards/web/: package.json
dashboards/web/src/: index.js
docker/: Dockerfile.api  Dockerfile.dev  compose.yml
python/autotunerl/: __init__.py  cli.py
python/autotunerl/api/: app.py  deps.py  models.py
python/autotunerl/api/routes/: compare.py  configs.py  devices.py  ops.py  tunes.py
python/autotunerl/api/workers/: worker.py
python/autotunerl/core/: benchmarks.py  caching.py  config.py  hashing.py  logging.py  orchestrator.py  structures.py
python/autotunerl/db/: base.py  crud.py  models.py
python/autotunerl/db/migrations/: README
python/autotunerl/dp/: dag_shortest_path.py  fft_factorization.py  fusion_chain.py  knapsack.py
python/autotunerl/rl/: agent_dqn.py  agent_ppo.py  env.py  replay.py  utils.py
scripts/: bench_gemm.sh  format.sh  lint.sh  run_smoke_tune.sh  setup_pocl.sh
src/cl/: gemm.cl
src/runner/: cl_runner.cpp  cl_runner.hpp  correctness.cpp  correctness.hpp  main.cpp  profiler.cpp  profiler.hpp
tests/cpp/: CMakeLists.txt  test_correctness.cpp
tests/py/: test_api.py  test_dp_knapsack.py  test_env.py  test_fft_dp.py
